--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@tailwindcss/typography": "^0.0.0-insiders.0339c42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
