--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/types": "^3.74.1",
+    "@sanity/vision": "^3.74.1",
     "@tailwindcss/typography": "^0.0.0-insiders.0339c42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -19,6 +23,8 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sanity": "^3.74.1",
+    "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
