--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@sanity/image-url": "^1.1.0",
     "@sanity/types": "^3.74.1",
-    "@sanity/vision": "^3.74.1",
+    "@sanity/vision": "^3.75.0",
     "@tailwindcss/typography": "^0.0.0-insiders.0339c42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
+    "next-sanity": "^9.8.55",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sanity": "^3.74.1",
+    "sanity": "^3.75.0",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1"
   },
